welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:8: error: not found: type int
def move(nbPas:int, versLAvant:boolean) {
               ^Program:8: error: not found: type boolean
def move(nbPas:int, versLAvant:boolean) {
                               ^